sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value f
		f (plusPetitQue(i+1,i)){
                ^