sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var x=0
while(x==0)
	x=0
	for( i <- 0 to getNombreValeurs()-2 ){
		f (plusPetitQue(i+1,i)){
			echange(i,i+1)
			x=1
		}
	}

}
